# DoomVxp

./: CMakeLists.txt
bitstream/: CMakeLists.txt  bitstream.c  bitstream.h  injected_bitstream.c  injected_bitstream.h
cmake/: toolchain-arm-none-eabi.cmake
console/: console.c  console.h
core/: CMakeLists.txt  c_fix.c  mre_std.c
doomgeneric/: CMakeLists.txt  d_iwad.c  d_loop.c  d_main.c  d_net.c  deh_str.h  doomdef.h  doomgeneric.c  doomgeneric_mre.c  doomtype.h  g_game.c  gusconf.c  hu_stuff.c  i_cdmus.c  i_endoom.c  i_joystick.c  i_mremusic.c  i_mresound.c  i_scale.c  i_sdlmusic.c  i_sound.c  i_swap.h  i_system.c  i_video.c  m_argv.c  m_config.c  m_menu.c  m_misc.c  memio.c  mus2mid.c  p_doors.c  p_map.c  p_saveg.c  p_setup.c  p_spec.c  r_data.c  r_main.c  st_stuff.c  statdump.c  v_video.c  (+5 more)
main/: main.cpp
mixer/: CMakeLists.txt  mixer.c  mixer.h
